fixed alignment

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -169,7 +169,6 @@ a
 {
     height: 60px;
     width: auto;
-    text-align: right;
     padding-top: 0.75em;
     margin-bottom: -10px;/* per me i vendose images pak ma nalt. Nuk e bejme ket nderrim ne .images div sepse do nderronte edhe stili i divave tjere qe e perdorin images per stilizim*/
 }
